5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1800_2572.log
== TEST (2019-06-11 17:03:50) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
x=zeros(2,dtype=int)
for i in range(size(mat)):
	if(mat[i]%2==0):
		x[0]=x[0]+1
	else:
		x[1]=x[1]+1
print(x)
-- ERROR:
File "XXXX", line 3
    x=zeros(2,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:05:27) 
-- CODE:
from numpy import*
mat=arrey(eval(input("vetor com os numeros de matricula: "))
x=zeros(2, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2==0):
		x[0]=x[0]+1
	else:
		x[1]=x[1]+1
print(x)
-- ERROR:
File "XXXX", line 3
    x=zeros(2, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:06:46) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
x=zeros(2,dtype=int)
for i in range(size(mat)):
	if(mat[i]%2==0):
		x[0]=x[0]+1
	else:
		x[1]=x[1]+1
print(x)
-- ERROR:
File "XXXX", line 3
    x=zeros(2,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:07:42) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
x=zeros(2,dtype=int)
#x=zeros(2,dtype=int)
for i in range(size(mat)):
	if(mat[i]%2==0):
		x[0]=x[0]+1
	else:
		x[1]=x[1]+1
print(x)
-- ERROR:
File "XXXX", line 3
    x=zeros(2,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:06:41) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
#x=zeros(2,dtype=int)
#x=zeros(2,dtype=int)
p=0
im=0
for i in mat:
	if(mat[i]%2==1):
		im=im+1
x=zeros(im,dtype=int)
for k in mat:
	if(mat[k]%2==1):
		x[p]=x[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 5
    p=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:07:32) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))

p=0
im=0
for i in mat:
	if(mat[i]%2==1):
		im=im+1
x=zeros(im,dtype=int)
for k in mat:
	if(mat[k]%2==1):
		x[p]=x[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 4
    p=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:08:19) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))

im=0
for i in mat:
	if(mat[i]%2==1):
		im=im+1
x=zeros(im,dtype=int)
p=0
for k in mat:
	if(mat[k]%2==1):
		x[p]=x[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 4
    im=0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:31:17) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))

im=0
for i in size(mat):
	if(mat[i]%2!=0):
		im=im+1
x=zeros(im,dtype=int)
p=0
for k in size(mat):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 4
    im=0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:32:39) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
im=0
for i in size(mat):
	if(mat[i]%2!=0):
		im=im+1
x=zeros(im,dtype=int)
p=0
for k in size(mat):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 3
    im=0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:32:48) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
imp=0
for i in size(mat):
	if(mat[i]%2!=0):
		im=im+1
x=zeros(im,dtype=int)
p=0
for k in size(mat):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 3
    imp=0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:34:55) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
Imp=0
for i in size(mat):
	if(mat[i]%2!=0):
		Imp=Imp+1
x=zeros(Imp,dtype=int)
p=0
for k in size(mat):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 3
    Imp=0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:41:03) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
im=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		im=im+1
x=zeros(im,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 3
    im=0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:46:50) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: "))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
File "XXXX", line 3
    w=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:47:09) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: ")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:47:52) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: ")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- EXECUTION TIME:
1.18772
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
vetor com os numeros de matricula: [12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
vetor com os numeros de matricula: [31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:51:44) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: ")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:52:46) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: ")))
w=0
for i in size(mat):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in size(mat):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:54:26) 
-- CODE:
from numpy import*
mat=array(eval(input("vetor com os numeros de matricula: ")))
w=0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		w=w+1
x=zeros(w,dtype=int)
p=0
for k in range(size(mat)):
	if(mat[k]%2!=0):
		x[p]=mat[k]
		p=p+1
print(x)
-- EXECUTION TIME:
1.25276
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
